src/app/details/tabs/molecule-tab/molecule-tab.component.scss
.container {
  display: flex;
  align-items: flex-start;
  overflow-y: auto;
  height: 100%;
  background: var(--surface);
  font-family: 'Roboto', sans-serif;
  gap: var(--gap);
  padding-left: var(--gap);
  align-content: space-between;

  & {
    --columns: 6;
    --gap: 20px;
    --half-gap: calc(var(--gap) / 2);
    --padding: 20px;
    --column-width: max(100px, calc((var(--width) - (var(--columns) + 1) * var(--gap)) / var(--columns)));
    --icon-width: var(--column-width);
    --icon-height: 84px;
    --margin-right: 2px;
  }

}

.highlight {
  color: var(--primary)
}


.content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: var(--half-gap);
  width: calc((var(--columns) - 1) * var(--column-width) + (var(--columns) - 2) * var(--gap));
  height: 100%;

  .list {
    width: 100%;


    .header {
      padding: 0 2px;
      font-weight: 500;
      letter-spacing: 0.15px;
      color: var(--outline);
    }
  }


  .divider {
    width: 100%;
  }

  .composition-container {
    width: 100%;
  }



}

/* TOC */
.toc {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  padding: 5px 0 5px 0;
  gap: 8px;
  width: var(--column-width);
  height: calc(100% - 10px);
  overflow-y: auto;
  font-size: 16px;
  font-weight: 600;
  text-align: right;

  // Sticky
  position: sticky;
  top: 0;
}

.spinner-container{
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  padding-top: 20px;
}

.description-content{
  padding: 20px;
}


.padding{
  padding: 5px 20px;
}

